Closed
Bug 358979
Opened 19 years ago
Closed 19 years ago
setCaretOffset doesn't return False if it cannot set the caret offset
Categories
(Firefox :: Disability Access, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wwalker, Assigned: aaronlev)
References
Details
(Keywords: access)
Attachments
(2 files)
|
5.39 KB,
patch
|
Details | Diff | Splinter Review | |
|
5.12 KB,
patch
|
ginnchen+exoracle
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20061030 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20061030 Minefield/3.0a1
Point Firefox to a page containing the following:
<html>
<ol>
<li>Here is 1 item.
<li>Here is 2 item.
<li>Here is 3 item.
<li>Here is 4 item.
</ol>
</html>
When I try to call setCaretOffset on a list item pointing it to something around the manfactured list item number (e.g., the '.' in '1. Here is 1 item'), I believe I'm seeing the following behavior:
1) The return value of setCaretOffset is True
2) The caret position, as indicated by an object:caret-moved event, seems to position the caret at the end of the text
Reproducible: Always
Steps to Reproduce:
See details
Actual Results:
See details
Expected Results:
If the caret cannot be positioned to where I request, I'd expect the return value to setCaretOffset to be False, I'd not expect the caret to move, and I wouldn't expect to get a caret-moved event.
| Assignee | ||
Updated•19 years ago
|
| Assignee | ||
Comment 1•19 years ago
|
||
Assignee: nobody → aaronleventhal
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•19 years ago
|
||
Attachment #244379 -
Flags: review?(ginn.chen)
Attachment #244379 -
Flags: review?(ginn.chen) → review+
| Assignee | ||
Updated•19 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•