Bug 358979. nsIAccessibleText::SetCaretOffset should return false and do nothing if caret cannot be set to the specified location. r=ginn.chen